--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://quinn1876.github.io/recipe-book/",
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,6 +16,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-thunk": "^2.1.0",
+    "@types/styled-components": "^5.1.0",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
     "gh-pages": "^2.2.0",
@@ -24,6 +27,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.0",
     "typescript": "^3.9.3"
   },
   "scripts": {
