--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0",
+    "styled-components": "^5.1.1",
     "typescript": "^3.9.3"
   },
   "scripts": {
@@ -54,5 +54,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
+    "eslint": "6.6.0",
+    "eslint-plugin-react": "^7.20.0"
   }
 }
