--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://quinn1876.github.io/recipe-book/",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
@@ -17,6 +18,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.5",
     "gh-pages": "^2.2.0",
@@ -32,13 +34,14 @@
     "typescript": "^3.9.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:client": "react-scripts start",
     "build-react": "react-scripts build",
     "build": "tsc",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:api": "cd ../recipe-book-server && python -m server"
   },
   "eslintConfig": {
     "extends": "react-app"
