--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^25.2.3",
-    "@types/node": "^14.0.5",
+    "@types/node": "^14.14.22",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
@@ -20,8 +20,11 @@
     "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^7.14.5",
     "gh-pages": "^2.2.0",
+    "mongoose": "^5.11.13",
+    "nodemon": "^2.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -29,17 +32,19 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
+    "ts-node": "^9.1.1",
     "typescript": "^3.9.3"
   },
   "scripts": {
-    "start:client": "react-scripts start",
+    "start": "react-scripts start",
     "build-react": "react-scripts build",
     "build": "tsc",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "start:server": "cd ../recipe-book-server && python -m server"
+    "start:server": "cd ../recipe-book-server && python -m server",
+    "dev": ""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,6 +62,8 @@
     ]
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.3",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "eslint": "6.6.0",
