--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://quinn1876.github.io/recipe-book/",
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@babel/core": "7.9.0",
+    "@babel/core": "^7.12.10",
     "@material-ui/core": "^4.10.0",
     "@material-ui/icons": "^4.9.1",
     "@svgr/webpack": "4.3.3",
@@ -19,7 +19,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/redux-thunk": "^2.1.0",
-    "@types/styled-components": "^5.1.0",
+    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
     "axios": "^0.19.2",
@@ -28,8 +28,12 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
+    "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "connect-sqlite3": "^0.9.11",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -42,11 +46,13 @@
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "^1.6.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "file-loader": "4.3.0",
     "firebase": "^7.14.5",
     "fs-extra": "^8.1.0",
     "gh-pages": "^2.2.0",
     "html-webpack-plugin": "4.0.0-beta.11",
+    "http": "^0.0.1-security",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
@@ -55,6 +61,7 @@
     "mini-css-extract-plugin": "0.9.0",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
@@ -88,12 +95,15 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build-react": "node scripts/build.js",
-    "build": "tsc",
+    "build": "tsc --project tsconfig.react.json",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "node scripts/test.js",
     "start:server": "cd ../recipe-book-server && python -m server",
-    "dev": ""
+    "dev": "nodemon --watch src -e ts --exec yarn dev:start",
+    "dev:start": "npm-run-all express:build express:start",
+    "express:build": "tsc --project tsconfig.express.json",
+    "express:start": "cross-env NODE_ENV=development babel-node ./build/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -111,10 +121,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/node": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@types/body-parser": "^1.19.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
     "@types/mongoose": "^5.10.3",
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
+    "cross-env": "^7.0.3",
     "eslint": "6.6.0",
     "eslint-plugin-react": "^7.20.0"
   },
