--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
-    "jsx": "react",
-    "outDir": "./app/build-tsc",
-    "rootDir": "./app/src",
-    "strict": true,
+    "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true
+    "module": "commonjs",
+    "typeRoots": [
+      "./types"
+    ]
   },
-  "include": [
-    "./app/src"
-  ],
-  "exclude": [
-    "./app/src/store/firebase"
-  ]
 }
