--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/express-useragent": "^1.0.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.14.22",
     "@types/react": "^16.9.35",
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "express-useragent": "^1.0.15",
     "file-loader": "4.3.0",
     "firebase": "^7.14.5",
     "fs-extra": "^8.1.0",
