--- a/package.json
+++ b/package.json
@@ -131,11 +131,7 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/mongoose": "^5.10.3",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "cross-env": "^7.0.3",
-    "eslint": "6.6.0",
-    "eslint-plugin-react": "^7.20.0"
+    "cross-env": "^7.0.3"
   },
   "jest": {
     "roots": [
