--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "react": "node scripts/start.js",
     "build-react": "node scripts/build.js",
     "build": "tsc --project tsconfig.react.json",
     "predeploy": "npm run build",
