--- a/tsconfig.express.json
+++ b/tsconfig.express.json
@@ -18,7 +18,7 @@
     "noEmit": false,
   },
   "include": [
-    "types/**/*.d.ts",
+    "@types/**/*.d.ts",
     "src/**/*.ts",
   ],
   "exclude": []
