--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "/",
   "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "12.16.0"
+  },
   "dependencies": {
     "@babel/core": "^7.12.10",
     "@material-ui/core": "^4.10.0",
