--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/express-useragent": "^1.0.0",
     "@types/jest": "^25.2.3",
+    "@types/knex": "^0.16.1",
     "@types/node": "^14.14.22",
+    "@types/pg": "^8.6.1",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
@@ -63,11 +65,13 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "knex": "^0.95.10",
     "mini-css-extract-plugin": "0.9.0",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "pg": "^8.7.1",
     "pnp-webpack-plugin": "1.6.4",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -110,7 +114,14 @@
     "express:build": "tsc --project tsconfig.express.json",
     "express:start": "cross-env NODE_ENV=development babel-node ./build/index.js",
     "build": "cross-env NODE_ENV=production npm-run-all express:build build-react",
-    "start": "cross-env NODE_ENV=production node ./build/index.js"
+    "start": "cross-env NODE_ENV=production node ./build/index.js",
+    "docker:dev": "docker-compose run --service-ports dev-db ",
+    "lint": "eslint ./src/*",
+    "migrate:make": "knex migrate:make",
+    "migrate:latest": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback",
+    "seed:make": "knex seed:make",
+    "seed:run": "knex seed:run"
   },
   "eslintConfig": {
     "extends": "react-app"
