--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "connect-sqlite3": "^0.9.11",
+    "connect-pg-simple": "^6.2.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "3.4.2",
@@ -67,6 +67,7 @@
     "jest-watch-typeahead": "0.4.2",
     "knex": "^0.95.10",
     "mini-css-extract-plugin": "0.9.0",
+    "mock-session": "^0.0.5",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
@@ -83,12 +84,14 @@
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "sinon": "^11.1.2",
     "style-loader": "0.23.1",
     "styled-components": "^5.1.1",
     "terser-webpack-plugin": "2.3.5",
@@ -107,7 +110,8 @@
     "reactTs:build": "tsc --project tsconfig.react.json",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "node scripts/test.js",
+    "test:frontend": "node scripts/test.js",
+    "test:integration": "cross-env NODE_ENV=test knex migrate:latest && cross-env NODE_ENV=test ts-mocha --reporter dot --project ./tsconfig.express.json ./tests/integration/*.test.ts --exit",
     "start:server": "cd ../recipe-book-server && python -m server",
     "dev": "nodemon --watch src -e ts --exec yarn dev:start",
     "dev:start": "npm-run-all express:build express:start",
@@ -116,6 +120,7 @@
     "build": "cross-env NODE_ENV=production npm-run-all express:build build-react",
     "start": "cross-env NODE_ENV=production node ./build/index.js",
     "docker:dev": "docker-compose run --service-ports dev-db ",
+    "docker:test": "docker-compose run --service-ports test-db ",
     "lint": "eslint ./src/*",
     "migrate:make": "knex migrate:make",
     "migrate:latest": "knex migrate:latest",
@@ -142,12 +147,22 @@
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@types/body-parser": "^1.19.0",
+    "@types/chai": "^4.2.21",
+    "@types/chai-http": "^4.2.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
+    "@types/keygrip": "^1.0.2",
+    "@types/mocha": "^9.0.0",
     "@types/mongoose": "^5.10.3",
-    "cross-env": "^7.0.3"
+    "@types/request": "^2.48.7",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "cross-env": "^7.0.3",
+    "mocha": "^9.1.0",
+    "ts-mocha": "^8.0.0"
   },
   "jest": {
     "roots": [
