--- a/tsconfig.express.json
+++ b/tsconfig.express.json
@@ -15,11 +15,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
+    "noEmit": false
   },
   "include": [
     "@types/**/*.d.ts",
-    "src/**/*.ts",
+    "src/**/*.ts"
   ],
   "exclude": []
 }
