--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node",
-    "module": "commonjs",
-  },
+    "module": "commonjs"
+  }
 }
