--- a/tsconfig.react.json
+++ b/tsconfig.react.json
@@ -21,13 +21,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": true
   },
   "include": [
     "./app/src/*",
     "@types/**/*.d.ts"
   ],
   "exclude": [
-    "./app/src/store/firebase"
+    "./app/src/store/firebase",
+    "./node_modules/knex/types/*.d.ts"
   ]
 }
