--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
-    "body-parser": "^1.19.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "connect-pg-simple": "^6.2.1",
@@ -111,7 +110,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test:frontend": "node scripts/test.js",
-    "test:integration": "cross-env NODE_ENV=test knex migrate:latest && cross-env NODE_ENV=test ts-mocha --reporter dot --project ./tsconfig.express.json ./tests/integration/*.test.ts --exit",
+    "test:integration": "cross-env NODE_ENV=test ts-mocha --project ./tsconfig.express.json ./tests/integration/*.test.ts --exit",
+    "test:unit": "cross-env NODE_ENV=test ts-mocha --project ./tsconfig.express.json ./tests/unit/*.test.ts --exit",
     "start:server": "cd ../recipe-book-server && python -m server",
     "dev": "nodemon --watch src -e ts --exec yarn dev:start",
     "dev:start": "npm-run-all express:build express:start",
