--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "connect-pg-simple": "^6.2.1",
+    "connect-pg-simple": "^7.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "3.4.2",
@@ -96,7 +96,7 @@
     "terser-webpack-plugin": "2.3.5",
     "ts-node": "^9.1.1",
     "ts-pnp": "1.1.6",
-    "typescript": "^3.9.3",
+    "typescript": "^4.2.4",
     "url-loader": "2.3.0",
     "webpack": "4.42.0",
     "webpack-dev-server": "3.10.3",
@@ -116,7 +116,7 @@
     "dev": "nodemon --watch src -e ts --exec yarn dev:start",
     "dev:start": "npm-run-all express:build express:start",
     "express:build": "tsc --project tsconfig.express.json",
-    "express:start": "cross-env NODE_ENV=development babel-node ./build/index.js",
+    "express:start": "cross-env NODE_ENV=development babel-node ./build/src/index.js",
     "build": "cross-env NODE_ENV=production npm-run-all express:build build-react",
     "start": "cross-env NODE_ENV=production node ./build/index.js",
     "docker:dev": "docker-compose run --service-ports dev-db ",
@@ -149,6 +149,7 @@
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.21",
     "@types/chai-http": "^4.2.0",
+    "@types/connect-pg-simple": "^4.2.4",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.9",
     "@types/expect": "^24.3.0",
