--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "firebase": "^7.14.5",
     "fs-extra": "^8.1.0",
     "gh-pages": "^2.2.0",
+    "google-auth-library": "^7.10.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "http": "^0.0.1-security",
     "identity-obj-proxy": "3.0.0",
