--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,22 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
 
+  prod-db:
+    image: "postgres"
+    environment:
+      POSTGRES_USER: docker
+      POSTGRES_PASSWORD: docker
+      POSTGRES_DB: docker
+    ports:
+          - 5484:5432
+    volumes:
+      - prod-data:/var/lib/postgresql/data
+
+
+  prod-app:
+    build: ./Dockerfile.production
+
+
 volumes:
   db-data:
   test-data:
