--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "knex": "^0.95.10",
     "mini-css-extract-plugin": "0.9.0",
     "mock-session": "^0.0.5",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
